# libmoreinttypes

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DeprecatedOptions.cmake  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  dir_4f66c8dfdba1e17796e9cdac54878e99.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c2f37eb5efad80313d87fec2e0ed09f1.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d8440da4ad174552b4736964497981e1.html  functions.html  functions_vars.html  index.html  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-issue.md
.github/workflows/: codeql.yml  doxygen.yml  gnu.yml  mingw-win-host.cmake  mingw.yml  msvc.yml  valgrind.yml
cmake/: DeprecatedOptions.cmake  ProjectVersion.cmake
d0/d1c/: structUInt64.html  structUInt64.js
d0/d57/: group__int64__protected.html  group__int64__protected.js
d0/dc1/: group__int__ctor.html
d0/ddb/: group__sbyte__ctor.html  group__sbyte__ctor.js
d1/d6a/: group__numeric.html  group__numeric.js
d2/d2e/: group__sbyte__protected.html  group__sbyte__protected.js
d2/d46/: group__int__fn__wrappers.html
d3/d5a/: group__int16__protected.html  group__int16__protected.js
d3/d5d/: group__int16__ctor.html  group__int16__ctor.js
d3/dc7/: group__uint16__protected.html  group__uint16__protected.js
d3/dcb/: group__int__interface.html
d4/d61/: group__text.html  group__text.js
d5/d4a/: structInt32.html  structInt32.js
d5/d95/: group__int__class.html
d7/d14/: group__int64__ctor.html
d8/d06/: group__uint__class.html  group__uint__class.js
d8/d71/: structUInt16.html  structUInt16.js
d9/d90/: structSbyte.html  structSbyte.js
d9/dd5/: group__int__protected.html  group__int__protected.js
da/d78/: group__uint16__ctor.html  group__uint16__ctor.js
da/ddb/: group__byte__protected.html  group__byte__protected.js
db/d25/: structInt16.html  structInt16.js
db/d38/: group__byte__ctor.html  group__byte__ctor.js
db/dc3/: group__uint64__protected.html  group__uint64__protected.js
dc/d38/: group__uint64__ctor.html  group__uint64__ctor.js
dc/d6d/: group__uint64__class.html  group__uint64__class.js
dc/db2/: group__int16__class.html  group__int16__class.js
dd/d18/: structUInt32.html  structUInt32.js
dd/d8f/: structByte.html  structByte.js
dd/da0/: todo.html
dd/db5/: group__uint__protected.html  group__uint__protected.js
dd/dfc/: group__sbyte__class.html  group__sbyte__class.js
de/d8d/: structInt64.html  structInt64.js
df/d85/: group__uint16__class.html  group__uint16__class.js
df/d90/: group__int64__class.html
df/dc8/: group__byte__class.html  group__byte__class.js
df/deb/: group__uint__ctor.html  group__uint__ctor.js
doxygen/: Doxyfile  custom.css  gendocs  gendocs.cmd
examples/: demo.c
examples/demo/: CMakeLists.txt  main.c
examples/demo++/: CMakeLists.txt  main.cpp
examples/rtrim/: CMakeLists.txt  main.cpp
gnu/: clean  gendocs
include/moreinttypes/: _compat.h  _exports.h  core.h  utils.h
include/moreinttypes/types/: Byte.h  Int16.h  Int32.h  Int64.h  Integral.h  Sbyte.h  UInt16.h  UInt32.h  UInt64.h
include/moreinttypes/utils/: numeric.h  text.h
pkgconfig/: moreinttypes.pc
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  (+2 more)
src/: Byte.c  Int16.c  Int32.c  Int64.c  Sbyte.c  UInt16.c  UInt32.c  UInt64.c  debug.c  debug.h  numeric.c  text.c
src/win32/: CMakeLists.txt  moreinttypes.rc
test/: CMakeLists.txt  valgrind.supp
test/include/: CMakeLists.txt  TestHelpers.cpp  TestHelpers.h
test/src/: main.c  main.cpp  suites.h  test_int_types.c  test_math_lib.c  test_moreinttypes_core_h.cpp  test_string_lib.c  test_utils_numeric_h.cpp  test_utils_text_h.cpp
